добаваляет сетки about

--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,5 +1,10 @@
 .about__title {
   text-align: start;
+  margin: 0;
+
+  @media (--mobile) {
+    margin-bottom: 28px;
+  }
 
   @media (--desktop) {
     padding-left: 175px;
@@ -12,9 +17,17 @@
     padding-bottom: 58px;
   }
 
+  @media (--not-mobile) {
+    padding-top: 55.5px;
+    padding-bottom: 83px;
+  }
+
   @media (--desktop) {
-    padding-left: 175px;
+    padding-top: 68px;
     padding-right: 175px;
+    padding-bottom: 90px;
+    padding-left: 175px;
+
     max-width: 1050px;
   }
 }
