добаваляет featured__container

--- a/source/sass/blocks/featured.scss
+++ b/source/sass/blocks/featured.scss
@@ -2,3 +2,18 @@
   padding: 0;
   position: relative;
 }
+
+.featured__container {
+  padding-top: 31px;
+  padding-bottom: 36px;
+
+  @media (--not-mobile) {
+    padding-top: 39.5px;
+    padding-bottom: 52px;
+  }
+
+  @media (--desktop) {
+    padding-top: 54px;
+    padding-bottom: 73px;
+  }
+}
