--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -29,12 +29,15 @@
   @media (--not-mobile) {
     grid-column: 1 / 4;
     grid-row: 1 / 2;
+    margin-bottom: 37.5px;
   }
 
   @media (--desktop) {
     grid-column: 2 / 5;
     grid-row: 1 / 2;
     z-index: 2;
+    margin-top: 61px;
+    margin-bottom: 35px;
   }
 }
 
@@ -44,11 +47,16 @@
   @media (--not-mobile) {
     grid-column: 4 / -1;
     grid-row: 1 / 2;
+    width: 100px;
+    margin-left: auto;
+    text-align: center;
   }
 
   @media (--desktop) {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
+    margin: 0 auto;
+    margin-top: 67px;
   }
 }
 
@@ -78,22 +86,45 @@
 
 .product__description {
   margin: 0;
-  margin-bottom: 28px;
+  margin-bottom: 15px;
+
+  @media (--not-mobile) {
+    margin-bottom: 35px;
+  }
+
+  @media (--desktop) {
+    margin-bottom: 60px;
+  }
 }
 
 .product__list {
   list-style-type: none;
   margin: 0;
-  margin-bottom: 28px;
+  margin-bottom: 27px;
+
+  @media (--not-mobile) {
+    margin-bottom: 57px;
+  }
+
+  @media (--desktop) {
+    margin-bottom: 109px;
+  }
 }
 
 .product__image {
   margin: 0;
-  margin-bottom: 25.5px;
+
+  display: block;
+
+  @media (--mobile) {
+    margin-bottom: 25.5px;
+  }
 
   @media (--not-mobile) {
     grid-column: 3 / -1;
     grid-row: 2 / 4;
+    background-size: contain;
+    margin-left: 42px;
   }
 
   @media (--desktop) {
@@ -104,6 +135,13 @@
 
 
 .product__price {
-  margin: 0;
-  margin-bottom: 24.5;
+  text-align: center;
+}
+
+.product__button {
+  margin-top: 24.5px;
+
+  @media (--not-mobile) {
+    margin-top: 33px;
+  }
 }
