--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -65,6 +65,7 @@
   @media (--not-mobile) {
     grid-column: 1 / -1;
     grid-row: 3 / 4;
+    margin-bottom: 55px;
   }
 
   @media (--desktop) {
