добаваляет grid form

--- a/source/sass/blocks/contact-details.scss
+++ b/source/sass/blocks/contact-details.scss
@@ -2,3 +2,21 @@
   list-style-type: none;
   padding: 0;
 }
+
+.contact-details__item {
+  @media (--mobile) {
+    display: flex;
+    flex-direction: column;
+
+    &:not(:last-child) {
+      margin-bottom: 34.5px;
+    }
+  }
+}
+
+.contact-details__value {
+  border: none;
+  box-shadow: inset 0 -2px 0 #000000;
+  padding: 14px 10px 20px 0;
+  background-color: inherit;
+}
