--- a/source/sass/blocks/form-order.scss
+++ b/source/sass/blocks/form-order.scss
@@ -1,10 +1,12 @@
 .form-order {
+  padding-top: 17px;
 
   background: var(--main-color);
 }
 
 .form-order__text {
   margin-bottom: 29px;
+  margin-top: 0;
 }
 
 .form-order__field-type {
@@ -13,7 +15,11 @@
 
 .form-order__field-color {
   margin-bottom: 33px;
-  background-color: var(--second-color);
+
+  @media (--not-mobile) {
+    background-color: var(--second-color);
+    padding: 50px 0;
+  }
 }
 
 .form-order__field-user {
@@ -22,7 +28,10 @@
 
 .form-order__field-contacts {
   margin-bottom: 34.5px;
-  background-color: var(--second-color);
+
+  @media (--not-mobile) {
+    background-color: var(--second-color);
+  }
 }
 
 .form-order__field-info {
@@ -31,4 +40,7 @@
 
 .form-order__required-note {
   margin-bottom: 30px;
+  color: #444444;
+  font-size: 14px;
+  line-height: 1.14;
 }
