--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -48,6 +48,7 @@
 @import "./blocks/user-form.scss";
 @import "./blocks/label-form.scss";
 @import "./blocks/text-form.scss";
+@import "./blocks/check.scss";
 @import "./blocks/type-form.scss";
 @import "./blocks/color-form.scss";
 @import "./blocks/contact-details.scss";
