добаваляет grid catalog

--- a/source/sass/blocks/catalog-page.scss
+++ b/source/sass/blocks/catalog-page.scss
@@ -1,3 +1,9 @@
 .catalog-page {
   background: var(--main-color);
 }
+
+.catalog-page__products {
+  @media (--not-mobile) {
+    margin-bottom: 53px;
+  }
+}
