--- a/source/sass/blocks/description-wrapper.scss
+++ b/source/sass/blocks/description-wrapper.scss
@@ -1,6 +1,20 @@
 .description-wrapper {
-  padding: 27px;
+  padding-top: 0;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  border: 1px solid #ececec;
+  box-sizing: border-box;
+
+  @media (--mobile) {
+    padding: 0 27px;
+  }
+
+  @media (--not-mobile) {
+    padding: 0 33px 0 34px;
+  }
+
+  @media (--desktop) {
+    padding: 0 26.5px 0 33.5px;
+  }
 }
