добаваляет grid catalog-title

--- a/source/sass/blocks/catalog-products.scss
+++ b/source/sass/blocks/catalog-products.scss
@@ -1,6 +1,18 @@
 .catalog-products {
   min-width: 260px;
   max-width: 1050px;
+
+  @media (--mobile) {
+    padding-top: 30px;
+  }
+
+  @media (--not-mobile) {
+    padding-top: 67px;
+  }
+
+  @media (--desktop) {
+    padding-top: 111px;
+  }
 }
 
 .catalog-products__list {
