--- a/source/sass/blocks/catalog-page.scss
+++ b/source/sass/blocks/catalog-page.scss
@@ -2,6 +2,10 @@
   background: var(--main-color);
 }
 
+.catalog-page__title {
+  margin: 0;
+}
+
 .catalog-page__products {
   @media (--not-mobile) {
     margin-bottom: 53px;
