--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -8,6 +8,7 @@
 
 
   @media (--not-mobile) {
+    padding: 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -15,9 +16,12 @@
   }
 }
 
-.main-header__logo {
-  height: 35px;
+.main-header__wrapper {
+  position: relative;
+  border-bottom: 1px solid #000000;
+}
 
+.main-header__logo {
   @media (--not-mobile) {
     order: 1;
   }
@@ -36,7 +40,7 @@
   width: 21px;
   height: 20px;
   z-index: 2;
-  right: 30px;
+  right: 60px;
   top: 40%;
   cursor: pointer;
 
@@ -111,11 +115,11 @@
     margin: 0;
   }
 
-  @media (--tablet) {
+  @media (--not-mobile) {
     order: 3;
     position: absolute;
-    bottom: -50%;
-    left: 30px;
+    bottom: -200%;
+    left: 0;
     background: transparent;
   }
 
