добаваляет grid main-header

--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -3,7 +3,6 @@
   padding: 22px 31px;
   display: flex;
   position: relative;
-  justify-content: center;
   z-index: 2;
 
 
@@ -14,11 +13,16 @@
     justify-content: space-between;
     max-width: 1050px;
   }
+
+  @media (--desktop) {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+  }
 }
 
 .main-header__wrapper {
   position: relative;
-  border-bottom: 1px solid #000000;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .main-header__logo {
@@ -117,24 +121,29 @@
 
   @media (--not-mobile) {
     order: 3;
-    position: absolute;
-    bottom: -200%;
-    left: 0;
-    background: transparent;
   }
 
   @media (--desktop) {
     order: 1;
+    justify-content: flex-start;
   }
 }
 
 .main-header__user {
-  @media (--not-mobile) {
+  @media (--tablet) {
     order: 2;
+    margin-left: auto;
+  }
+
+  @media (--desktop) {
+    order: 3;
+    margin-left: auto;
   }
 }
 
 .main-header__description {
+  margin: 0;
+
   @media (--mobile) {
     display: none;
   }
@@ -142,8 +151,8 @@
   @media (--not-mobile) {
     order: 4;
     position: absolute;
-    bottom: -50%;
-    right: 30px;
+    bottom: -60%;
+    right: 0;
   }
 }
 
@@ -154,8 +163,8 @@
 
   @media (--desktop) {
     position: absolute;
-    bottom: -50%;
-    left: 30px;
+    bottom: -60%;
+    left: 0;
     background: transparent;
     display: block;
   }
