--- a/source/sass/blocks/site-sublist.scss
+++ b/source/sass/blocks/site-sublist.scss
@@ -1,6 +1,19 @@
 .site-sublist {
   list-style-type: none;
   padding: 0;
+
+  @media (--desktop) {
+    display: flex;
+    max-width: 60%;
+    flex-wrap: wrap;
+    margin: 0;
+  }
+}
+
+.site-sublist__item {
+  @media (--desktop) {
+    margin-right: 31px;
+  }
 }
 
 .site-sublist__link {
@@ -9,7 +22,11 @@
   color: #000000;
   text-decoration: none;
 
-  @media (--not-mobile) {
-    padding: 21.5px 0;
+  @media (--desktop) {
+    padding-top: 32.5px;
+    padding-bottom: 31.5px;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 1.6;
   }
 }
