--- a/source/sass/blocks/user-list.scss
+++ b/source/sass/blocks/user-list.scss
@@ -1,11 +1,94 @@
 .user-list {
   list-style-type: none;
   padding: 0;
+
+  @media (--not-mobile) {
+    display: flex;
+    align-items: center;
+    border-left: 1px solid rgba(0, 0, 0, 0.1);
+  }
 }
+
 
 .user-list__link {
   font-size: 17px;
   line-height: 24px;
+  font-weight: 700;
   color: #000000;
   text-decoration: none;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  @media (--not-mobile) {
+    padding-top: 32.5px;
+    padding-bottom: 31.5px;
+  }
+
+
+  &--icon_search {
+    --icon: url("../../img/search.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+
+    @media (--not-mobile) {
+      min-width: 82px;
+
+      span {
+        display: none;
+      }
+    }
+
+    &::before {
+      content: "";
+      display: block;
+      width: 18px;
+      height: 18px;
+      background: #000000;
+      mask: var(--icon);
+      margin-right: 31px;
+      margin-left: 31px;
+    }
+
+    &:hover::before {
+
+      background: #63d1bb;
+    }
+
+    &:active::before {
+
+      background: rgba(99, 209, 187, 0.3);
+    }
+  }
+
+  &--icon_basket {
+    --icon: url("../../img/basket.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    border-left: 1px solid rgba(0, 0, 0, 0.1);
+
+
+    &::before {
+      content: "";
+      display: block;
+      width: 21px;
+      height: 18px;
+      background: #000000;
+      mask: var(--icon);
+      box-sizing: border-box;
+      margin-right: 31px;
+      margin-left: 31px;
+    }
+
+    &:hover::before {
+
+      background: #63d1bb;
+    }
+
+    &:active::before {
+
+      background: rgba(99, 209, 187, 0.3);
+    }
+  }
 }
