--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -40,6 +40,14 @@
   justify-content: center;
   align-items: center;
 
+  &:hover {
+    color: rgba(0, 0, 0, 0.6);
+  }
+
+  &:active {
+    color: rgba(0, 0, 0, 0.3);
+  }
+
   @media (--not-mobile) {
     padding-top: 32.5px;
     padding-bottom: 31.5px;
