--- a/source/sass/blocks/site-sublist.scss
+++ b/source/sass/blocks/site-sublist.scss
@@ -22,6 +22,14 @@
   color: #000000;
   text-decoration: none;
 
+  &:hover {
+    color: rgba(0, 0, 0, 0.6);
+  }
+
+  &:active {
+    color: rgba(0, 0, 0, 0.3);
+  }
+
   @media (--desktop) {
     padding-top: 32.5px;
     padding-bottom: 31.5px;
