добавляет кастомные чекбоксы

--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -20,10 +20,14 @@
       display: contents;
     }
 
-    &--desktop_off {
-      @media (--desktop) {
-        display: contents;
-      }
+    @media (--tablet) {
+      display: contents;
+    }
+  }
+
+  &--desktop_off {
+    @media (--desktop) {
+      display: contents;
     }
   }
 
