--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -15,12 +15,17 @@
   min-width: 260px;
   max-width: 1050px;
 
-  &--desktop_on {
-    @media (--mobile) {
-      display: contents;
-    }
 
-    @media (--tablet) {
+  @media (--not-mobile) {
+    margin-inline: 50px;
+  }
+
+  @media (--desktop) {
+    margin-inline: auto;
+  }
+
+  &--mobile_off {
+    @media (--mobile) {
       display: contents;
     }
   }
@@ -29,13 +34,5 @@
     @media (--desktop) {
       display: contents;
     }
-  }
-
-  @media (--not-mobile) {
-    margin-inline: 50px;
-  }
-
-  @media (--desktop) {
-    margin-inline: auto;
   }
 }
