--- a/source/sass/blocks/user-list.scss
+++ b/source/sass/blocks/user-list.scss
@@ -21,6 +21,17 @@
   justify-content: center;
   align-items: center;
 
+  @media (--mobile) {
+    position: relative;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    padding-top: 28.5px;
+    padding-bottom: 26.5px;
+    box-shadow: 0 1px 0 #ececec, inset 0 1px 0 #ececec;
+    cursor: pointer;
+  }
+
   &:hover {
     color: rgba(0, 0, 0, 0.6);
   }
