--- a/source/sass/blocks/user-list.scss
+++ b/source/sass/blocks/user-list.scss
@@ -24,7 +24,7 @@
   @media (--mobile) {
     position: relative;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     padding-top: 28.5px;
     padding-bottom: 26.5px;
