--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -64,7 +64,7 @@
   width: 20px;
   height: 14px;
   display: block;
-  justify-self: end;
+  justify-self: flex-end;
 
   @media (--not-mobile) {
     display: none;
@@ -85,7 +85,7 @@
   width: 21px;
   height: 20px;
   display: block;
-  justify-self: end;
+  justify-self: flex-end;
 
   @media (--not-mobile) {
     display: none;
