борьба с line-decore

--- a/source/sass/blocks/line-decor.scss
+++ b/source/sass/blocks/line-decor.scss
@@ -1,7 +1,6 @@
 .line-decor--bottom::after {
   content: "";
   background-image: url("../../img/zigzag-line.svg");
-  background-position: bottom;
   background-repeat: repeat-x;
   background-size: auto;
   position: absolute;
@@ -9,16 +8,18 @@
   box-sizing: border-box;
   left: 0;
   right: 0;
-  bottom: 0;
   z-index: 2;
   height: 6px;
+  margin-top: 36px;
 
 
   @media (--not-mobile) {
     height: 17px;
+    margin-top: 52px;
   }
 
   @media (--desktop) {
     height: 23px;
+    margin-top: 73px;
   }
 }
