--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -1,7 +1,7 @@
 .products {
   position: relative;
   background-image: url("../../img/background-featured-mobile.jpg");
-  background-color: var(--main-color, #ffffff);
+  background-color: #f9f9f9;
   background-repeat: no-repeat;
   background-size: contain;
   background-position: top;
