--- a/source/sass/blocks/site-sublist.scss
+++ b/source/sass/blocks/site-sublist.scss
@@ -3,11 +3,12 @@
   padding: 0;
   z-index: 2;
 
-  @media (--desktop) {
+  @media (--not-mobile) {
     display: flex;
-    max-width: 60%;
+    max-width: 50%;
     flex-wrap: wrap;
     margin: 0;
+    height: auto;
   }
 }
 
@@ -29,6 +30,12 @@
 
   &:active {
     color: rgba(0, 0, 0, 0.3);
+  }
+
+  @media (--not-mobile) {
+    padding-top: 32.5px;
+    padding-bottom: 31.5px;
+    margin-bottom: 20px;
   }
 
   @media (--desktop) {
