--- a/source/sass/blocks/user-list.scss
+++ b/source/sass/blocks/user-list.scss
@@ -1,8 +1,10 @@
 .user-list {
   list-style-type: none;
   padding: 0;
+  background: var(--main-color);
 
   @media (--not-mobile) {
+    position: relative;
     display: flex;
     align-items: center;
     border-left: 1px solid rgba(0, 0, 0, 0.1);
