--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,46 +1,46 @@
 <div class="main-header__wrapper">
-<header class="main-header main-header--nojs page__centerer page__centerer--mobile_off">
-  <a class="header-logo main-header__logo" href="index.html" {% if permalink=="index.html" %}aria-current="page" {%
-    endif %}>
-    <img src="./img/logo-mobile.svg" width="86" height="35" alt="Логотип Мишки.">
-  </a>
-  <button class="main-header__toggle" type="button">
-    <span class="visually-hidden">Открыть меню</span>
-  </button>
-  <div class="main-header__nav-container nav-container">
-    <nav class="main-nav main-header__nav">
-      <ul class="main-nav__list site-list">
-        <li class="site-list__item">
-          <a class="site-list__link" href="catalog.html" {% if permalink=="catalog.html" %}aria-current="page" {% endif
-            %}>Каталог товаров</a>
-          <ul class="main-nav__sublist site-sublist">
-            <li class="site-sublist__item">
-              <a class="site-sublist__link" href="#">Новые поступления</a>
-            </li>
-            <li class="site-sublist__item">
-              <a class="site-sublist__link" href="#">Распродажа</a>
-            </li>
-          </ul>
-        </li>
-        <li class="site-list__item">
-          <a class="site-list__link" href="form.html" {% if permalink=="form.html" %}aria-current="page" {% endif
-            %}>Вязание на заказ</a>
-        </li>
-      </ul>
-    </nav>
-    <nav class="main-header__user user-nav">
-      <ul class="user-nav__list user-list">
-        <li class="user-list__item">
-          <a class="user-list__link user-list__link--icon_search" href="#"><span>Поиск по сайту</span></a>
-        </li>
-        <li class="user-list__item">
-          <a class="user-list__link user-list__link--icon_basket" href="#">Корзина: пока пуста</a>
+  <header class="main-header main-header--nojs page__centerer page__centerer--mobile_off">
+    <a class="header-logo main-header__logo" href="index.html" {% if permalink=="index.html" %}aria-current="page" {%
+      endif %}>
+      <img src="./img/logo-mobile.svg" width="86" height="35" alt="Логотип Мишки.">
+    </a>
+    <button class="main-header__toggle" type="button">
+      <span class="visually-hidden">Открыть меню</span>
+    </button>
+    <div class="main-header__nav-container nav-container">
+      <nav class="main-nav main-header__nav">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a class="site-list__link" href="catalog.html" {% if permalink=="catalog.html" %}aria-current="page" {%
+              endif %}>Каталог товаров</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="form.html" {% if permalink=="form.html" %}aria-current="page" {% endif
+              %}>Вязание на заказ</a>
+          </li>
+        </ul>
+        <ul class="main-nav__sublist site-sublist">
+          <li class="site-sublist__item">
+            <a class="site-sublist__link" href="#">Новые поступления</a>
+          </li>
+          <li class="site-sublist__item">
+            <a class="site-sublist__link" href="#">Распродажа</a>
+          </li>
+        </ul>
+      </nav>
+      <nav class="main-header__user user-nav">
+        <ul class="user-nav__list user-list">
+          <li class="user-list__item">
+            <a class="user-list__link user-list__link--icon_search" href="#"><span>Поиск по сайту</span></a>
+          </li>
+          <li class="user-list__item">
+            <a class="user-list__link user-list__link--icon_basket" href="#">Корзина: пока пуста</a>
 
-        </li>
-      </ul>
-    </nav>
-  </div>
+          </li>
+        </ul>
+      </nav>
+    </div>
 
-  <p class="main-header__description">Бесплатная доставка по России</p>
-</header>
+    <p class="main-header__description">Бесплатная доставка по России</p>
+  </header>
 </div>
