--- a/source/sass/blocks/header-logo.scss
+++ b/source/sass/blocks/header-logo.scss
@@ -3,4 +3,25 @@
   justify-content: center;
   align-items: center;
   justify-self: center;
+
+
+  img {
+    @media (--tablet) {
+      width: 116px;
+      height: 46px;
+    }
+
+    @media (--desktop) {
+      width: 150px;
+      height: 72px;
+    }
+
+    &:hover {
+      opacity: 60%;
+    }
+
+    &:active {
+      opacity: 30%;
+    }
+  }
 }
