--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -2,7 +2,11 @@
   <header class="main-header main-header--nojs page__centerer page__centerer--mobile_off">
     <a class="header-logo main-header__logo" href="index.html" {% if permalink=="index.html" %}aria-current="page" {%
       endif %}>
-      <img src="./img/logo-mobile.svg" width="86" height="35" alt="Логотип Мишки.">
+      <picture>
+        <source media="(min-width: 1150px)" srcset="./img/logo-desktop.svg">
+        <source media="(min-width:768px)" srcset="/img/logo-tablet.svg">
+        <img src="./img/logo-mobile.svg" width="86" height="35" alt="Логотип Мишки.">
+      </picture>
     </a>
     <button class="main-header__toggle" type="button">
       <span class="visually-hidden">Открыть меню</span>
