--- a/source/sass/blocks/card-product.scss
+++ b/source/sass/blocks/card-product.scss
@@ -23,11 +23,13 @@
 
   img {
     display: block;
+    object-fit: contain;
   }
 
   @media (--not-mobile) {
     grid-column: 1 / 2;
-    object-fit: cover;
+    width: 100%;
+    height: 100%;
   }
 }
 
