добавляет .image-content

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -64,3 +64,4 @@
 @import "./blocks/production.scss";
 @import "./blocks/production-container.scss";
 @import "./blocks/video-description.scss";
+@import "./blocks/image-content.scss";
