--- a/source/sass/blocks/card-product.scss
+++ b/source/sass/blocks/card-product.scss
@@ -17,14 +17,11 @@
   }
 }
 
+
 .card-product__image {
+  width: 100%;
+  height: 100%;
   order: -1;
-
-
-  img {
-    display: block;
-    object-fit: contain;
-  }
 
   @media (--not-mobile) {
     grid-column: 1 / 2;
