--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -64,4 +64,5 @@
 @import "./blocks/production.scss";
 @import "./blocks/production-container.scss";
 @import "./blocks/video-description.scss";
+@import "./blocks/preview.scss";
 @import "./blocks/image-content.scss";
