--- a/source/sass/blocks/description-wrapper.scss
+++ b/source/sass/blocks/description-wrapper.scss
@@ -2,6 +2,7 @@
   padding-top: 0;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: flex-start;
   border: 1px solid #ececec;
   box-sizing: border-box;
