--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -37,11 +37,11 @@
   }
 
   &:hover::before {
-    background: #46c1ae;
+    background: rgba(99, 209, 187);
   }
 
   &:active::before {
-    background: rgba(70, 193, 174, 0.3);
+    background: rgba(99, 209, 187, 0.3);
   }
 
   &::before {
