--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -75,6 +75,16 @@
   }
 }
 
+.contacts__map-iframe {
+  width: 100%;
+  height: 454px;
+  border: none;
+
+  @media (--not-mobile) {
+    height: 457px;
+  }
+}
+
 .contacts__button-wrapper {
   margin-bottom: 39px;
 
