--- a/source/sass/blocks/address.scss
+++ b/source/sass/blocks/address.scss
@@ -36,11 +36,13 @@
   &:hover {
     color: #46c1ae;
     border-bottom: 1px solid #46c1ae;
+    transition: all 200ms ease-in;
   }
 
   &:active {
     color: #46c1ae;
     border-bottom: 1px solid rgba(70, 193, 174, 0.1);
+    transition: all 200ms ease-in;
   }
 }
 
