--- a/source/sass/blocks/author.scss
+++ b/source/sass/blocks/author.scss
@@ -2,4 +2,7 @@
   font-size: 17px;
   line-height: 24px;
   font-weight: 700;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
