--- a/source/sass/blocks/button-size.scss
+++ b/source/sass/blocks/button-size.scss
@@ -19,11 +19,13 @@
   &:hover {
     outline: 2px solid rgba(68, 68, 68, 0.3);
     outline-offset: -1px;
+    transition: all 200ms ease-in;
   }
 
   &:active {
     outline: 2px solid #62d1ba;
     outline-offset: -1px;
+    transition: all 200ms ease-in;
   }
 }
 
