--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -62,6 +62,9 @@
 }
 
 .contacts__map {
+  display: grid;
+  grid-template-columns: 1fr;
+
   @media (--not-mobile) {
     grid-column: 1 / -1;
     grid-row: 3 / 4;
@@ -73,17 +76,31 @@
     grid-row: 1 / -1;
     max-width: 527px;
   }
-}
 
-.contacts__map-iframe {
-  width: 100%;
-  height: 454px;
-  border: none;
+  &--active {
+    width: 100%;
+    height: 454px;
+    border: none;
+    grid-area: 1 / 1 / 2 / 2;
 
-  @media (--not-mobile) {
-    height: 457px;
+    @media (--not-mobile) {
+      height: 457px;
+    }
+  }
+
+  &--passive {
+    border: none;
+    grid-area: 1 / 1 / 2 / 2;
+    z-index: 1;
+    display: block;
+    object-fit: cover;
+
+    @media (--not-mobile) {
+      height: 457px;
+    }
   }
 }
+
 
 .contacts__button-wrapper {
   margin-bottom: 39px;
