--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -20,10 +20,12 @@
 
   &:hover::after {
     background: #46c1ae;
+    transition: all 200ms ease-in;
   }
 
   &:active::after {
     background: rgba(70, 193, 174, 0.3);
+    transition: all 200ms ease-in;
   }
 
   &::after {
@@ -34,5 +36,6 @@
     background: #63d1bb;
     mask: var(--icon) no-repeat;
     box-sizing: border-box;
+    transition: all 200ms ease-in;
   }
 }
