--- a/source/sass/blocks/image-content.scss
+++ b/source/sass/blocks/image-content.scss
@@ -2,5 +2,9 @@
   display: block;
   object-fit: contain;
   width: 100%;
-  height: auto;
+  height: 100%;
+
+  &--cover {
+    object-fit: cover;
+  }
 }
