--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -50,6 +50,7 @@
   right: 30px;
   top: 40%;
   cursor: pointer;
+  transition: all 200ms ease-in;
 
   @media (--not-mobile) {
     display: none;
@@ -59,13 +60,14 @@
 
 .main-header--menu_closed .main-header__toggle::before {
   content: "";
-  background: url("../../img/header-nav-burger.svg");
+  background: url("../../icons/sprite.svg#header-nav-burger");
   background-repeat: no-repeat;
   background-position: center;
-  width: 20px;
-  height: 14px;
+  width: 22px;
+  height: 22px;
   display: block;
   justify-self: flex-end;
+  transition: all 200ms ease-in;
 
   @media (--not-mobile) {
     display: none;
@@ -80,13 +82,14 @@
 
 .main-header--menu_opened .main-header__toggle::before {
   content: "";
-  background: url("../../img/menu-close.svg");
+  background: url("../../icons/sprite.svg#menu-close");
   background-repeat: no-repeat;
   background-position: center;
-  width: 21px;
-  height: 20px;
+  width: 22px;
+  height: 22px;
   display: block;
   justify-self: flex-end;
+  transition: all 200ms ease-in;
 
   @media (--not-mobile) {
     display: none;
@@ -96,7 +99,7 @@
 .main-header--menu_opened .main-header__nav-container {
   @media (--mobile) {
     position: absolute;
-    bottom: -400%;
+    bottom: -383%;
     left: 0;
     display: flex;
     flex-direction: column;
