--- a/source/sass/blocks/price-of-item.scss
+++ b/source/sass/blocks/price-of-item.scss
@@ -23,10 +23,12 @@
 
   &:hover::before {
     background: #46c1ae;
+    transition: all 200ms ease-in;
   }
 
   &:active::before {
     background: rgba(70, 193, 174, 0.3);
+    transition: all 200ms ease-in;
   }
 
   &::before {
@@ -37,5 +39,6 @@
     width: 22px;
     height: 22px;
     box-sizing: border-box;
+    transition: all 200ms ease-in;
   }
 }
