--- a/source/sass/blocks/production-container.scss
+++ b/source/sass/blocks/production-container.scss
@@ -4,6 +4,18 @@
   min-width: 260px;
   max-width: 1050px;
   border: 1px solid #ececec;
+  transition: all 200ms ease-in;
+
+
+  &:hover {
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
+    transition: all 200ms ease-in;
+  }
+
+  &:active {
+    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
+    transition: all 200ms ease-in;
+  }
 
   @media (--desktop) {
     display: grid;
