--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -1,6 +1,6 @@
 .products {
   position: relative;
-  background-image: url("../../img/background-featured-mobile.jpg");
+  background-image: url("../../img/background-featured-mobile@1x.jpg");
   background-color: #f9f9f9;
   background-repeat: no-repeat;
   background-size: contain;
@@ -9,11 +9,21 @@
   box-sizing: border-box;
   min-width: 320px;
 
+  @media (--hippi) {
+    background-image: url("../../img/background-featured-mobile@2x.jpg");
+  }
+
   @media (--not-mobile) {
+    background-image: url("../../img/background-featured-desktop@1x.jpg");
+
+    @media (--hippi) {
+      background-image: url("../../img/background-featured-desktop@2x.jpg");
+    }
+
     &::after {
       content: "";
       display: block;
-      background: url("../../img/wave-decore.svg");
+      background: url("../../icons/sprite.svg#wave-decore");
       background-repeat: repeat-x;
       background-size: 35px;
       height: 24px;
