--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -3,13 +3,19 @@
 
 
   @media (--not-mobile) {
-    background: url("../../img/review-mobile.jpg");
+    background: url("../../img/review@1x.jpg");
     background-position: top left;
     background-repeat: no-repeat;
     background-size: 350px 457px;
     height: 457px;
     padding-bottom: 85px;
+
+    @media (--hippi) {
+      background: url("../../img/review@2x.jpg") no-repeat top left;
+      background-size: 350px 457px;
+    }
   }
+
 
   @media (--desktop) {
     margin-inline: auto;
@@ -31,7 +37,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto auto auto;
-    padding-top: 78px;
+    padding-top: 82.5px;
     padding-bottom: 47px;
     position: relative;
   }
