--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -52,10 +52,12 @@
 
   &:hover {
     color: rgba(0, 0, 0, 0.6);
+    transition: all 200ms ease-in;
   }
 
   &:active {
     color: rgba(0, 0, 0, 0.3);
+    transition: all 200ms ease-in;
   }
 
   @media (--not-mobile) {
