--- a/source/sass/global/media.scss
+++ b/source/sass/global/media.scss
@@ -2,3 +2,4 @@
 @custom-media --not-mobile (min-width:768px);
 @custom-media --tablet (min-width:768px) and (max-width:1149.9px);
 @custom-media --desktop (min-width: 1150px);
+@custom-media --hippi (-webkit-min-device-pixel-ratio: 2) , (min-resolution: 2dppx);
