--- a/source/templates/_layout.twig
+++ b/source/templates/_layout.twig
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ pages[pageId].name }} | Мишка | HTML Academy</title>
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="icon" href="favicon.ico" sizes="any">
+  <link rel="icon" href="../img/favicons/32.svg" type="image/svg+xml">
+  <link rel="icon" href="../img/favicons/32.png" type="image/png">
+  <link rel="manifest" href="/source/manifest.webmanifest.json">
+  <link rel="apple-touch-icon" href="../img/favicons/aple.png">
 </head>
 
 <body class="page__body">
