--- a/source/sass/blocks/contact-details.scss
+++ b/source/sass/blocks/contact-details.scss
@@ -22,9 +22,71 @@
   }
 }
 
+.contact-details__wrapper {
+  box-shadow: inset 0 -2px 0 #000000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding-right: 8px;
+  padding-left: 17px;
+
+
+  &:hover {
+    box-shadow: inset 0 -2px 0 #62d1ba;
+  }
+
+  &:focus-within {
+    box-shadow: inset 0 -2px 0 #62d1ba;
+    outline: 2px solid #62d1ba;
+    outline-offset: 5px;
+    border-radius: 1px;
+  }
+}
+
 .contact-details__value {
   border: none;
-  box-shadow: inset 0 -2px 0 #000000;
-  padding: 14px 10px 20px 0;
+  padding: 15px 40px 19px 0;
   background-color: inherit;
+  flex-grow: 1;
+
+  &:focus-visible {
+    outline: none;
+  }
+}
+
+.contact-details__decor-phone {
+  --icon: url("../../icons/sprite.svg#phone");
+  background-size: 32px;
+  background-position: center;
+  display: block;
+  width: 32px;
+  height: 32px;
+  mask: var(--icon);
+  background-color: #000000;
+
+  :focus-within {
+    background: #62d1ba;
+  }
+}
+
+.contact-details__decor-email {
+  --icon: url("../../icons/sprite.svg#email");
+  display: block;
+  width: 32px;
+  height: 32px;
+  mask: var(--icon);
+  background: #000000;
+
+  :focus-within {
+    background: #62d1ba;
+  }
+}
+
+.contact-details__value:active + .contact-details__decor-phone {
+  background: #62d1ba;
+}
+
+.contact-details__value:active + .contact-details__decor-email {
+  background: #62d1ba;
 }
