--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   min-width: 320px;
   padding-top: 38px;
+  max-width: 1150px;
 
   @media (--not-mobile) {
     display: grid;
@@ -17,7 +18,6 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: auto auto auto;
-    max-width: 1052px;
     margin-inline: auto;
   }
 }
@@ -32,8 +32,34 @@
   @media (--not-mobile) {
     grid-column: 1 / 5;
     grid-row: 1 / 2;
-    margin-left: 50px;
+    margin-right: 50px;
     margin-bottom: 50px;
+    margin-left: 50px;
+    position: relative;
+    display: flex;
+    flex-grow: 1;
+    justify-content: space-between;
+    align-items: center;
+    box-sizing: border-box;
+    width: 100%;
+
+
+    &::after {
+      content: "";
+      display: block;
+      background-image: url("../../icons/sprite.svg#flag");
+      background-position: center;
+      background-size: 82px;
+      box-sizing: border-box;
+      width: 50px;
+      height: 82px;
+      margin-right: 100px;
+
+      @media (--desktop) {
+        position: absolute;
+        left: -114px;
+      }
+    }
   }
 
 
