--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -37,7 +37,7 @@
     &::after {
       content: "";
       display: block;
-      background: url("../../img/wave-decore.svg");
+      background: url("../../icons/sprite.svg#wave-decore");
       background-repeat: repeat-x;
       background-size: 50px;
       height: 34px;
