--- a/source/sass/blocks/user-form.scss
+++ b/source/sass/blocks/user-form.scss
@@ -26,6 +26,7 @@
 
   @media (--mobile) {
     flex-direction: column;
+    align-items: flex-start;
   }
 }
 
@@ -34,6 +35,21 @@
   padding: 17px 7.5px 17px 0;
   box-shadow: inset 0 -2px 0 #000000;
   width: 100%;
+
+  &:hover {
+    box-shadow: inset 0 -2px 0 #62d1ba;
+  }
+
+  &:active {
+    box-shadow: inset 0 -2px 0 #62d1ba;
+  }
+
+  &:focus-within {
+    box-shadow: inset 0 -2px 0 #62d1ba;
+    outline: 2px solid #62d1ba;
+    outline-offset: 5px;
+    border-radius: 1px;
+  }
 
   @media (--not-mobile) {
     margin-left: 24px;
