--- a/source/sass/blocks/production-container.scss
+++ b/source/sass/blocks/production-container.scss
@@ -28,6 +28,7 @@
 .production-container__title {
   display: flex;
   text-align: start;
+  align-items: center;
 
   @media (--mobile) {
     order: -1;
@@ -48,9 +49,25 @@
   &::before {
     content: "";
     display: block;
+    background: url("../../icons/sprite.svg#camera");
+    background-position: center;
     background-size: 32px;
     height: 22px;
-    width: 91px; //заменить
+    width: 32px;
+    min-width: 32px;
+
+    @media (--mobile) {
+      margin-right: 25px;
+      margin-left: 34px;
+    }
+
+    @media (--tablet) {
+      margin-right: 33px;
+    }
+
+    @media (--desktop) {
+      margin-bottom: 27px;
+    }
   }
 }
 
