--- a/source/sass/blocks/header-form.scss
+++ b/source/sass/blocks/header-form.scss
@@ -10,7 +10,7 @@
     &::after {
       content: "";
       display: block;
-      background: url("../../img/wave-decore.svg");
+      background: url("../../icons/sprite.svg#wave-decore");
       background-repeat: repeat-x;
       background-size: 35px;
       height: 24px;
@@ -28,7 +28,7 @@
     &::after {
       content: "";
       display: block;
-      background: url("../../img/wave-decore.svg");
+      background: url("../../icons/sprite.svg#wave-decore");
       background-repeat: repeat-x;
       background-size: 50px;
       height: 34px;
