--- a/source/sass/blocks/info-form.scss
+++ b/source/sass/blocks/info-form.scss
@@ -8,6 +8,7 @@
   resize: vertical;
   border: 2px solid rgba(68, 68, 68, 1);
   padding: 17px;
+  box-sizing: border-box;
 
   &:hover {
     border: 2px solid rgba(98, 209, 186, 1);
