--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -8,7 +8,18 @@
   flex-direction: column;
   align-items: center;
   padding: 0;
+  position: relative;
 
+  @media (--mobile) {
+    &::before {
+      content: "";
+      display: inline-block;
+      width: 100%;
+      height: 1px;
+      background-color: rgba(229, 229, 229, 1);
+      transform: translateY(82px);
+    }
+  }
 
   @media (--not-mobile) {
     display: grid;
