добавляет декор footer mobile

--- a/source/sass/blocks/product-price.scss
+++ b/source/sass/blocks/product-price.scss
@@ -8,7 +8,12 @@
   margin: 0;
 }
 
+.product-price__description {
+  word-wrap: break-word;
+}
+
 .product-price__number {
   margin: 0;
   margin-left: 5px;
+  word-wrap: break-word;
 }
