--- a/source/sass/blocks/product-specification.scss
+++ b/source/sass/blocks/product-specification.scss
@@ -15,6 +15,7 @@
   padding-top: 13px;
   padding-bottom: 15px;
   position: relative;
+  word-wrap: break-word;
 }
 
 .product-specification__specification {
@@ -25,4 +26,5 @@
   padding-bottom: 13px;
   padding-left: 30px;
   position: relative;
+  word-wrap: break-word;
 }
