--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -13,6 +13,7 @@
   border: 2px solid #444444;
   box-sizing: border-box;
   display: inline-block;
+  word-wrap: break-word;
   cursor: pointer;
 
   &:hover {
