--- a/source/sass/blocks/heading.scss
+++ b/source/sass/blocks/heading.scss
@@ -3,6 +3,7 @@
   line-height: 30px;
   font-weight: 700;
   text-align: center;
+  word-wrap: break-word;
 
   @media (--not-mobile) {
     font-size: 43px;
