--- a/source/sass/blocks/main-modal.scss
+++ b/source/sass/blocks/main-modal.scss
@@ -1,9 +1,26 @@
 .main-modal {
   background: var(--main-color);
+  position: relative;
+  margin: auto;
+  min-height: 336px;
+  z-index: 3;
+}
+
+.main-modal__container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.9);
+
+  &--close {
+    display: none;
+  }
 }
 
 .main-modal__centerer {
-  margin: 0 auto;
   padding: 35px 108px 46px;
   max-width: 566px;
   box-sizing: border-box;
@@ -12,7 +29,6 @@
 
   @media (--mobile) {
     padding: 28px 30px 46px;
-    min-width: 320px;
   }
 }
 
