--- a/source/templates/_layout.twig
+++ b/source/templates/_layout.twig
@@ -7,10 +7,9 @@
   <title>{{ pages[pageId].name }} | Мишка | HTML Academy</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="icon" href="favicon.ico" sizes="any">
-  <link rel="icon" href="../img/favicons/32.svg" type="image/svg+xml">
-  <link rel="icon" href="../img/favicons/32.png" type="image/png">
-  <link rel="manifest" href="/source/manifest.webmanifest.json">
-  <link rel="apple-touch-icon" href="../img/favicons/aple.png">
+  <link rel="icon" href="favicons/32.svg" type="image/svg+xml">
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="apple-touch-icon" href="favicons/180.png">
 </head>
 
 <body class="page__body">
