добавляет декор logoheader-fix

--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -3,9 +3,9 @@
     <a class="header-logo main-header__logo" href="index.html" {% if permalink=="index.html" %}aria-current="page" {%
       endif %}>
       <picture>
-        <source media="(min-width: 1150px)" srcset="./img/logo-desktop.svg">
-        <source media="(min-width:768px)" srcset="/img/logo-tablet.svg">
-        <img src="./img/logo-mobile.svg" width="86" height="35" alt="Логотип Мишки.">
+        <source media="(min-width: 1150px)" srcset="img/logotest.svg#desktop">
+        <source media="(min-width:768px)" srcset="img/logotest.svg#tablet">
+        <img src="img/logotest.svg#mobile" width="90" height="36" alt="Логотип Мишки.">
       </picture>
     </a>
     <button class="main-header__toggle" type="button">
